// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChannelItem when hovering renders a channel 1`] = `
<div
  class="css-view-1dbjc4n r-cursor-1loqt21 r-display-1adg3ll r-outlineStyle-1ny4l3l r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
  data-focusable="true"
  data-testid="channel-item"
  style="background-color: rgb(50, 47, 55);"
  tabindex="0"
>
  <mock-channel-item-image
    height="225"
    testid="channel-item-image"
    title="Aimbot-Up Cup Duos w/ Chokzy"
    url="channels/live_user_tfue-800x450.jpg"
    viewerscount="56834"
    width="400"
  />
  <mock-channel-item-detail
    broadcasterimageurl="profiles/2470b5c6-a737-4ba6-8987-c28e0ca839e1-profile_image-150x150.jpg"
    broadcastername="Tfue"
    categoryname="Fortnite"
    ishighlighted="true"
    testid="channel-item-detail"
    title="Aimbot-Up Cup Duos w/ Chokzy"
    width="400"
  />
</div>
`;

exports[`ChannelItem when not hovering renders a channel 1`] = `
<div
  class="css-view-1dbjc4n r-cursor-1loqt21 r-display-1adg3ll r-outlineStyle-1ny4l3l r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
  data-focusable="true"
  data-testid="channel-item"
  tabindex="0"
>
  <mock-channel-item-image
    height="225"
    testid="channel-item-image"
    title="Aimbot-Up Cup Duos w/ Chokzy"
    url="channels/live_user_tfue-800x450.jpg"
    viewerscount="56834"
    width="400"
  />
  <mock-channel-item-detail
    broadcasterimageurl="profiles/2470b5c6-a737-4ba6-8987-c28e0ca839e1-profile_image-150x150.jpg"
    broadcastername="Tfue"
    categoryname="Fortnite"
    ishighlighted="false"
    testid="channel-item-detail"
    title="Aimbot-Up Cup Duos w/ Chokzy"
    width="400"
  />
</div>
`;

exports[`ChannelItem when the category is null renders a channel without category name 1`] = `
<div
  class="css-view-1dbjc4n r-cursor-1loqt21 r-display-1adg3ll r-outlineStyle-1ny4l3l r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
  data-focusable="true"
  data-testid="channel-item"
  style="background-color: rgb(50, 47, 55);"
  tabindex="0"
>
  <mock-channel-item-image
    height="225"
    testid="channel-item-image"
    title="Aimbot-Up Cup Duos w/ Chokzy"
    url="channels/live_user_tfue-800x450.jpg"
    viewerscount="56834"
    width="400"
  />
  <mock-channel-item-detail
    broadcasterimageurl="profiles/2470b5c6-a737-4ba6-8987-c28e0ca839e1-profile_image-150x150.jpg"
    broadcastername="Tfue"
    ishighlighted="true"
    testid="channel-item-detail"
    title="Aimbot-Up Cup Duos w/ Chokzy"
    width="400"
  />
</div>
`;
